--- a/TurboAPI-client-sdk/pom.xml
+++ b/TurboAPI-client-sdk/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.cool</groupId>
+            <artifactId>TurboAPI-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
