--- a/TurboAPI-gateway/pom.xml
+++ b/TurboAPI-gateway/pom.xml
@@ -21,6 +21,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.cool</groupId>
+            <artifactId>TurboAPI-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo</artifactId>
             <version>3.0.9</version>
